# TamTalk

./: .gitignore  CHANGELOG.md  README.md  build.cmd  build.sh  build_vst3_all.cmd  build_vst3_configure.cmd
UI/moble/android/: settings.gradle.kts
UI/moble/android/app/: build.gradle.kts
UI/moble/android/app/src/androidTest/java/com/example/tamtalk/: ExampleInstrumentedTest.kt
UI/moble/android/app/src/main/: AndroidManifest.xml
UI/moble/android/app/src/main/java/com/example/tamtalk/: MainActivity.kt
UI/moble/android/app/src/main/java/com/example/tamtalk/audio/: AudioStreamingService.kt  AudioUdpSender.kt
UI/moble/android/app/src/main/java/com/example/tamtalk/ui/theme/: Color.kt  Theme.kt  Type.kt
UI/moble/android/app/src/main/res/values/: strings.xml  themes.xml
UI/moble/android/app/src/test/java/com/example/tamtalk/: ExampleUnitTest.kt
UI/moble/android/gradle/wrapper/: gradle-wrapper.properties
VST/: protocol.md
VST/vst3-plugin/: CMakeLists.txt  README.md
VST/vst3-plugin/src/: LanAudioReceiver.cpp  LanAudioReceiver.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
